--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/components/*": ["./src/components/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/types/*": ["./src/types/*"],
-      "@/hooks/*": ["./src/hooks/*"],
+      "@/hooks/*": ["./src/hocs/*"],
       "@/app/*": ["./src/app/*"]
     }
   },
