--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@/types/*": ["./src/types/*"],
       "@/hooks/*": ["./src/hocs/*"],
       "@/app/*": ["./src/app/*"]
-    }
+    },
+    "types": ["@testing-library/jest-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
